--- a/sass/base/body.scss
+++ b/sass/base/body.scss
@@ -33,6 +33,9 @@ body {
     box-shadow: 0 0 5px #ccc;
     padding: 7px 18px !important;
     border-radius: 6px;
+    @media only screen and (max-width:767px){
+        padding:7px 10px !important;
+    }
 }
 
 @media only screen and (max-width: 767px) {
