--- a/sass/components/table.scss
+++ b/sass/components/table.scss
@@ -66,6 +66,9 @@ table.dataTable tbody th, table.dataTable tbody td{
         overflow-x: hidden !important;
         overflow-x: scroll !important;
     }
+    @media only screen and (max-width:767px){
+        padding:10px 10px !important;
+    }
     
 &::-webkit-scrollbar {
     width: 5px;
