--- a/sass/components/navbar.scss
+++ b/sass/components/navbar.scss
@@ -215,6 +215,10 @@
     color: white !important;
     text-align: center;
     width: fit-content;
+
+    &:hover{
+      color: white !important ;
+    }
   }
   .head-side-icon{
    i{
